<resources>
    <string name="app_name">[Fiona Mei]-GUI Calc</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="sqrt">√</string>
    <string name="equal">=</string>
    <string name="decimal">.</string>
    <string name="clear">clear</string>
    <string name="invalid_format">invalid formatting</string>
    <string name="divide_by_zero">Cannot divide by zero!</string>
    <string name="sqrt_negative">Cannot square a negative!</string>
    <string name="operator_multi_click">You can only use one operator at a time!</string>
</resources>